--- a/k8s/gateway.yaml
+++ b/k8s/gateway.yaml
@@ -4,7 +4,7 @@ kind: Deployment
 metadata:
   name: gateway
 spec:
-  replicas: 1
+  replicas: 2
   selector: { matchLabels: { app: gateway } }
   template:
     metadata: { labels: { app: gateway } }
@@ -16,6 +16,17 @@ spec:
         envFrom:
         - configMapRef: { name: app-config }
         - secretRef: { name: app-secrets }
+        resources:
+          requests:
+            cpu: 100m
+            memory: 128Mi
+          limits:
+            cpu: 200m
+            memory: 256Mi
+        livenessProbe:
+          httpGet: { path: /health, port: 8000 }
+          initialDelaySeconds: 10
+          periodSeconds: 10
         readinessProbe:
           httpGet: { path: /health, port: 8000 }
           initialDelaySeconds: 3
