--- a/k8s/memory.yaml
+++ b/k8s/memory.yaml
@@ -12,6 +12,19 @@ spec:
       containers:
       - name: memory
         image: memory:0.1.0
+        ports:
+        - containerPort: 8000
         envFrom:
         - configMapRef: { name: app-config }
         - secretRef: { name: app-secrets }
+        resources:
+          requests:
+            cpu: 200m
+            memory: 256Mi
+          limits:
+            cpu: 400m
+            memory: 512Mi
+        readinessProbe:
+          httpGet: { path: /health, port: 8000 }
+          initialDelaySeconds: 5
+          periodSeconds: 10
