--- a/k8s/responder.yaml
+++ b/k8s/responder.yaml
@@ -12,9 +12,22 @@ spec:
       containers:
       - name: responder
         image: responder:0.1.0
+        ports:
+        - containerPort: 8000
         envFrom:
         - configMapRef: { name: app-config }
         - secretRef: { name: app-secrets }
+        resources:
+          requests:
+            cpu: 200m
+            memory: 256Mi
+          limits:
+            cpu: 500m
+            memory: 512Mi
+        readinessProbe:
+          httpGet: { path: /health, port: 8000 }
+          initialDelaySeconds: 5
+          periodSeconds: 10
 ---
 apiVersion: v1
 kind: Service
@@ -24,5 +37,5 @@ spec:
   selector: { app: responder }
   ports:
   - name: http
-    port: 80
+    port: 8000
     targetPort: 8000
