Enhance observability and logging across services. Added readiness endpoints to gateway, memory, and responder services to check Kafka connectivity and worker state. Implemented rotating file logging for better log management. Updated README and curriculum documentation to reflect new features and usage instructions.

--- a/k8s/config.yaml
+++ b/k8s/config.yaml
@@ -10,6 +10,7 @@ data:
   MODEL: "llama3.1:8b-instruct-q4_K_M"
   EMBED_MODEL: "bge-m3"
   EMBED_DIM: "1024"
+  LOG_PATH: "/var/log/app/service.log"
 ---
 apiVersion: v1
 kind: Secret
