--- a/k8s/memory.yaml
+++ b/k8s/memory.yaml
@@ -25,6 +25,10 @@ spec:
             cpu: 400m
             memory: 512Mi
         readinessProbe:
-          httpGet: { path: /health, port: 8000 }
+          httpGet: { path: /ready, port: 8000 }
           initialDelaySeconds: 5
           periodSeconds: 10
+        livenessProbe:
+          httpGet: { path: /health, port: 8000 }
+          initialDelaySeconds: 10
+          periodSeconds: 20
