--- a/k8s/responder.yaml
+++ b/k8s/responder.yaml
@@ -25,9 +25,13 @@ spec:
             cpu: 500m
             memory: 512Mi
         readinessProbe:
-          httpGet: { path: /health, port: 8000 }
+          httpGet: { path: /ready, port: 8000 }
           initialDelaySeconds: 5
           periodSeconds: 10
+        livenessProbe:
+          httpGet: { path: /health, port: 8000 }
+          initialDelaySeconds: 10
+          periodSeconds: 20
 ---
 apiVersion: v1
 kind: Service
